[gd_scene load_steps=7 format=3 uid="uid://y36yytk34v0i"]

[ext_resource type="Script" path="res://scripts/characters/ais/ai.gd" id="1_6e7cc"]
[ext_resource type="PackedScene" uid="uid://cgic4q8egbmxp" path="res://scenes/characters/character_animation.tscn" id="2_vuvkh"]
[ext_resource type="Texture2D" uid="uid://c1ussrvj1xucu" path="res://assets/characters/ais/neuro_idle_sheet.png" id="3_a3wgx"]
[ext_resource type="Texture2D" uid="uid://bgwxn487mkwhh" path="res://assets/characters/ais/neuro_run_sheet.png" id="4_1chnv"]
[ext_resource type="PackedScene" uid="uid://cpp0tc7uqrv4" path="res://scenes/shared/hurtbox.tscn" id="5_bi4ec"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ng05f"]
radius = 59.0085

[node name="AI" type="Node2D"]
script = ExtResource("1_6e7cc")

[node name="CharacterAnimation" parent="." node_paths=PackedStringArray("character") instance=ExtResource("2_vuvkh")]
character = NodePath("..")

[node name="IdleSprite" parent="CharacterAnimation" index="0"]
texture = ExtResource("3_a3wgx")

[node name="RunSprite" parent="CharacterAnimation" index="1"]
texture = ExtResource("4_1chnv")

[node name="SearchField" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchField"]
shape = SubResource("CircleShape2D_ng05f")

[node name="Hurtbox" parent="." instance=ExtResource("5_bi4ec")]
visible = false
collision_layer = 1

[node name="CollisionPolygon2D" parent="Hurtbox" index="0"]
polygon = PackedVector2Array(-1, -18, -5, -16, -7, -11, -5, -8, -2, -5, -5, 1, -4, 10, -4, 12, -4, 13, -2, 13, -2, 10, 0, 5, 2, 10, 2, 13, 4, 13, 4, 10, 3, 2, 5, 4, 4, -1, 1, -4, 5, -10, 5, -13, 4, -16)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="take_damage" from="Hurtbox" to="." method="_on_hurtbox_take_damage"]

[editable path="CharacterAnimation"]
[editable path="Hurtbox"]
